inclinado las redes 3

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -100,6 +100,7 @@ footer a:hover {
 /*titulos */
 h2 {
     background-color: #0590fa; 
+    color:#fff; /* Texto blanco */
     padding: 10px; /* Espaciado interno */
     text-align: center; /* Centrado del texto */
     margin-top: 0; /* Elimina el margen superior predeterminado */
